--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -1,4 +1,3 @@
---find-links https://data.pyg.org/whl/torch-2.0.0+cpu.html
 awkward==2.2.1
 awkward-cpp==15
 certifi==2023.5.7
@@ -6,6 +5,7 @@ charset-normalizer==3.1.0
 cmake==3.26.3
 contourpy==1.0.7
 cycler==0.11.0
+einops==0.6.1
 EnergyFlow==1.3.2
 fabio==2023.4.1
 filelock==3.12.0
@@ -58,6 +58,7 @@ torch-geometric==2.3.1
 torch-scatter==2.1.1+pt20cpu
 torch-sparse==0.6.17+pt20cpu
 torch-spline-conv==1.2.2+pt20cpu
+torchvision==0.15.2
 tqdm==4.65.0
 triton==2.0.0
 typing_extensions==4.6.2
