--- a/requirements_gpu.txt
+++ b/requirements_gpu.txt
@@ -3,6 +3,7 @@ charset-normalizer==3.1.0
 cmake==3.26.3
 contourpy==1.0.7
 cycler==0.11.0
+einops==0.6.1
 fabio==2023.4.1
 filelock==3.12.0
 fonttools==4.39.4
